# MEIOU_APP

./: .gitignore  README.md
Debug/MET-2K-M/cmake/: CMakeLists.txt
OR/OR-2I-Outdoor/: CMakeCache.txt  CMakeLists.txt  Makefile  cbin.update  cmake_install.cmake
OR/OR-2I-Outdoor/common/: tcp_network.c
OR/OR-2I-Outdoor/common/Numeric_key/: scan_numeric_key.h
OR/OR-2I-Outdoor/common/peripheral_module/: IC_card_module.c
OR/OR-2I-Outdoor/common/tcp_server/: tcp_network_cmd.c  tcp_server  tcp_server.c
OR/OR-2I-Outdoor/daemon/: upgrade_app.c
OR/OR-2I-Outdoor/doc/: 2CD-ME4H（23.05.31）.sch
OR/OR-2I-Outdoor/include/anyka3918/: ak_vpss.h
OR/OR-2I-Outdoor/isptool/: h3b_gc2063_mipi2lane_sample_11_20200803_送样版本.conf  ip.txt  isp_ar0230_dvp.conf  isp_c3390_mipi_2lane_h3b.conf  isp_f37p_mipi_1lane_h3b.conf  isp_gc2063_dvp.conf  isp_gc4653_mipi_2lane_h3b_offwdrsubfile.conf  isp_h63_mipi_1lane_h3b.conf  isp_pr2000_dvp.conf  isp_sc2239_mipi_1lane_h3b.conf  isp_sc2332_mipi_2lane_h3b.conf  isp_sc3335_mipi_2lane_h3b.conf  isp_sc4236_dvp_h3b.conf  isp_sc501ai_mipi_2lane.conf
OR/OR-2I-Outdoor/isptool/img/: YUV_2022_07_29,14,30,49.yuv  YUV_2022_07_29,14,30,57.yuv  YUV_2022_07_29,14,43,38.yuv
OR/OR-2I-Outdoor/isptool/log/: ISPinfo_2022_05_20,11,49,06.txt
OR/OR-2I-Outdoor/share/: Makefile  cmake_install.cmake
OR/OR-2I-Outdoor/share/speex/: Makefile  cmake_install.cmake  gain_table.c  nb_celp.c  speex_callbacks.c
OR/OR-2I-Outdoor/share/speex/.deps/: bits.Plo  mdf.Plo  scal.Plo
OR/OR-2I-Outdoor/src/: device_led.h  motion_detect.h  outdoor_unlock.c  user_data.c  user_data.h
OR/OR-2I-Outdoor/upgrade/: cbin.update
OR/OR-2I-Outdoor/upgrade/app/: ipc_camera
OR/OR-2I-Outdoor/upgrade/platform/: app.sqsh4  daemon.sqsh4
PEARL/PEARL-Indoor/src/sqlite/: CMakeLists.txt
SCS/SCS-Indoor/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
SCS/SCS-Indoor/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
SCS/SCS-Indoor/src/ANYKA37E.BIN.dir/: C.includecache  DependInfo.cmake  build.make  depend.internal  depend.make  flags.make  link.txt  main.c.o.d  progress.make
SCS/SCS-Indoor/src/ANYKA37E.BIN.dir/layout/: ak_drv_wdt.c.o.d  doorbell_upgrade_windows.c.o.d  lang_xls.c.o.d  layout_1_music_list.c.o.d  layout_1_photo_list.c.o.d  layout_1_video_list.c.o.d  layout_add_data.c.o.d  layout_add_wifi.c.o.d  layout_call.c.o.d  layout_cctv.c.o.d  layout_connect_wifi.c.o.d  layout_data_list.c.o.d  layout_define.c.o.d  layout_device_busy.c.o.d  layout_device_transfer.c.o.d  layout_event.c.o.d  layout_family_transfer.c.o.d  layout_file_list.c.o.d  layout_home.c.o.d  layout_interphone.c.o.d  layout_keyboard.c.o.d  layout_media.c.o.d  layout_media_music.c.o.d  layout_media_photo.c.o.d  layout_monitor.c.o.d  layout_monitor2.c.o.d  layout_monitor_1.c.o.d  layout_password_input.c.o.d  layout_photo.c.o.d  layout_playback.c.o.d  layout_record_list.c.o.d  layout_setting.c.o.d  layout_setting_admin.c.o.d  layout_setting_camera.c.o.d  layout_setting_door.c.o.d  layout_setting_info.c.o.d  layout_setting_ipc.c.o.d  layout_setting_ring.c.o.d  layout_setting_scene.c.o.d  layout_setting_senior.c.o.d  (+10 more)
SCS/SCS-Indoor/src/api/: CMakeCache.txt  Makefile  cmake_install.cmake
SCS/SCS-Indoor/src/api/audio/: audio_config_anyka.h  audio_output.c  audio_output.h  audio_play.h
SCS/SCS-Indoor/src/api/common/: ak_drv_wdt.c  leo_audio_play.c  leo_audio_play.h  leo_monitor.c  os_standby.c
SCS/SCS-Indoor/src/api/filelist/: leo_filelist.c
SCS/SCS-Indoor/src/api/gpio/: gpio_api.h  leo_gpio.c  leo_gpio.h
SCS/SCS-Indoor/src/api/network/: network_audio_package.c  network_common.c  network_common.h  network_video_package.c  ping_host.c
SCS/SCS-Indoor/src/api/queue/: link_list.c  link_list.h  queue.c
SCS/SCS-Indoor/src/api/saradc/: atmosphere_det.c
SCS/SCS-Indoor/src/api/tcp_network/: tcp_network_cmd.h  tcp_upgrade.h
SCS/SCS-Indoor/src/api/video/: video_decode.c
SCS/SCS-Indoor/src/api/wlan/: tuya_api_func.c  tuya_sdk.c  tuya_stream_storage.c  wlan.c
SCS/SCS-Indoor/src/gperftools-2.10/src/: config.h
SCS/SCS-Indoor/src/gperftools-2.10/src/.deps/: libtcmalloc_and_profiler_la-profiler.Plo  libtcmalloc_internal_la-central_freelist.Plo  libtcmalloc_internal_la-heap-profiler.Plo  libtcmalloc_internal_la-internal_logging.Plo  libtcmalloc_internal_with_asserts_la-emergency_malloc.Plo  libtcmalloc_internal_with_asserts_la-memory_region_map.Plo  libtcmalloc_internal_with_asserts_la-stack_trace_table.Plo  libtcmalloc_la-heap-checker.Plo  (+4 more)
SCS/SCS-Indoor/src/include/api/: leo_api.h
SCS/SCS-Indoor/src/include/tuya/: tuya_ring_buffer.h  tuya_sdk.h
SCS/SCS-Indoor/src/iniparser/: Makefile  cmake_install.cmake
SCS/SCS-Indoor/src/layout/: ak_drv_wdt.h  doorbell_upgrade_windows.c  lang_xls.c  layout_add_data.c  layout_add_wifi.c  layout_call.c  layout_cctv.c  layout_connect_wifi.c  layout_define.c  layout_define.h  layout_file_list.c  layout_home.c  layout_interphone.h  layout_media_music.c  layout_monitor.c  layout_monitor_1.c  layout_setting.c  layout_setting_admin.c  layout_setting_door.c  layout_setting_info.c  layout_setting_ring.c  layout_setting_senior.c  layout_setting_sys.c  layout_setting_wifi.c  layout_standby.c  layout_tuya_register.c  user_data.c  user_data.h
SCS/SCS-Indoor/src/layout/resource/: rom.h
SCS/SCS-Indoor/src/lv_drivers/: Makefile  cmake_install.cmake  lv_port_disp.c
SCS/SCS-Indoor/src/lv_qrcode/: Makefile  cmake_install.cmake  lv_jpg_decode.c
SCS/SCS-Indoor/src/lvgl/: Makefile  cmake_install.cmake
SCS/SCS-Indoor/src/onvif/resource/: onvif_discover_devices.xml
SCS/SCS-Indoor/src/sqlite/: libtool  sqlite  sqlite3.pc
SCS/SCS-Indoor/src/tuya_batch_production_sdk/: Makefile  cmake_install.cmake
SCS/SCS-Indoor/src/tuya_batch_production_sdk/xls/: Makefile  cmake_install.cmake  ole.c  tuya_uuid_and_key.c
SCS/SCS-Indoor/upgrade/app/onvif/: onvif_discover_devices.xml
SCS/SCS-Indoor/upgrade/language/meiou/: language.xls  language上一版.xls
SCS/SCS-Indoor/upgrade/platform/: anyka_logo.rgb  app.sqsh4
SCS/SCS-Indoor/upgrade/scripts/: update.sh
(+1210 files in other folders)
